# talkful

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/ringui/: SKILL.md
.agents/skills/ringui/references/: alert-service.stories.tsx  auth-dialog.stories.tsx  caret.stories.tsx  checkbox.stories.tsx  collapse.stories.tsx  confirm-service.stories.tsx  contenteditable.stories.tsx  (+7 more)
public/: float.html
ringui-docs/: clipboard.stories.tsx  confirm.stories.tsx  dialog.stories.tsx  dropdown.stories.tsx  error-message.stories.tsx  header.stories.tsx  heading.stories.tsx  input.stories.tsx  list.stories.tsx  popup.stories.tsx  select.stories.tsx  simple-table.stories.tsx  tag-input.stories.tsx  tooltip.stories.tsx  user-agreement.stories.tsx  user-card.stories.tsx
scripts/: tauri.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: asr_example.rs  record_asr_example.rs  record_example.rs  refine_example.rs
src-tauri/ringui-docs/: alert.stories.tsx  analytics.stories.tsx  auth-dialog-service.stories.tsx  auth.stories.tsx  avatar-stack.stories.tsx  avatar.stories.tsx  banner.stories.tsx  breadcrumbs.stories.tsx  button-group.stories.tsx  button-set.stories.tsx  button-toolbar.stories.tsx  button.stories.tsx  code.stories.tsx  content-layout.stories.tsx  data-list.stories.tsx  date-picker.stories.tsx  dom.stories.tsx  editable-heading.stories.tsx  error-bubble.stories.tsx  footer.stories.tsx  grid.stories.tsx  group.stories.tsx  icon.stories.tsx  island.stories.tsx  link.stories.tsx  loader-inline.stories.tsx  loader-screen.stories.tsx  markdown.stories.tsx  message.stories.tsx  old-browsers-message.stories.tsx  pager.stories.tsx  panel.stories.tsx  progress-bar.stories.tsx  query-assist.stories.tsx  radio.stories.tsx  scrollable-section.stories.tsx  slider.stories.tsx  storage.stories.tsx  tab-trap.stories.tsx  table.stories.tsx  (+6 more)
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  runtime_pipeline.rs  state_machine.rs
src-tauri/src/asr/: mod.rs  sherpa_asr_processor.rs  sherpa_asr_service.rs
src-tauri/src/commands/: asr.rs  mod.rs  settings.rs  system_errors.rs
src-tauri/src/config/: dotfile_config_store.rs  implement.rs  mod.rs
src-tauri/src/logging/: log_error_reader.rs  log_path.rs  log_state.rs  logger_init.rs  mod.rs
src-tauri/src/record/: cpal_record_service.rs  mod.rs
src-tauri/src/refine/: llama_refine_service.rs  mod.rs
src-tauri/src/shared/: mod.rs
src/components/: AppHeader.tsx
src/pages/settings/: SettingsPage.tsx  restart-confirm-dialog.ts
src/pages/statistics/: StatisticsPage.tsx
(+17 files in other folders)
