[package]
name = "talkful"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

[lib]
name = "talkful_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-global-shortcut = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

cpal = "0.16.0"
anyhow = "1.0.102"
sherpa-rs = "0.6.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
llama-cpp-2 = "0.1.143"
encoding_rs = "0.8.35"
[dev-dependencies]
tempfile = "3"
